# codegen/lib/apiclient/Item/_api/Sitepages/SitepagesRequestBuilder.cs
@@ -1,0 +1,52 @@
+// <auto-generated/>
+#pragma warning disable CS0618
+using Graph.Community.Item._api.Sitepages.Pages;
+using Graph.Community.Item._api.Sitepages.PagesWithListItemId;
+using Microsoft.Kiota.Abstractions.Extensions;
+using Microsoft.Kiota.Abstractions;
+using System.Collections.Generic;
+using System.IO;
+using System.Threading.Tasks;
+using System;
+namespace Graph.Community.Item._api.Sitepages
+{
+    /// <summary>
+    /// Builds and executes requests for operations under \{serverRelativeSiteUrl}\_api\sitepages
+    /// </summary>
+    [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
+    public partial class SitepagesRequestBuilder : BaseRequestBuilder
+    {
+        /// <summary>The pages property</summary>
+        public global::Graph.Community.Item._api.Sitepages.Pages.PagesRequestBuilder Pages
+        {
+            get => new global::Graph.Community.Item._api.Sitepages.Pages.PagesRequestBuilder(PathParameters, RequestAdapter);
+        }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Graph.Community.Item._api.Sitepages.SitepagesRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="pathParameters">Path parameters for the request</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public SitepagesRequestBuilder(Dictionary<string, object> pathParameters, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/{serverRelativeSiteUrl}/_api/sitepages", pathParameters)
+        {
+        }
+        /// <summary>
+        /// Instantiates a new <see cref="global::Graph.Community.Item._api.Sitepages.SitepagesRequestBuilder"/> and sets the default values.
+        /// </summary>
+        /// <param name="rawUrl">The raw URL to use for the request builder.</param>
+        /// <param name="requestAdapter">The request adapter to use to execute the requests.</param>
+        public SitepagesRequestBuilder(string rawUrl, IRequestAdapter requestAdapter) : base(requestAdapter, "{+baseurl}/{serverRelativeSiteUrl}/_api/sitepages", rawUrl)
+        {
+        }
+        /// <summary>
+        /// Builds and executes requests for operations under \{serverRelativeSiteUrl}\_api\sitepages\pages({listItemId})
+        /// </summary>
+        /// <returns>A <see cref="global::Graph.Community.Item._api.Sitepages.PagesWithListItemId.PagesWithListItemIdRequestBuilder"/></returns>
+        /// <param name="listItemId">The path parameter: listItemId</param>
+        public global::Graph.Community.Item._api.Sitepages.PagesWithListItemId.PagesWithListItemIdRequestBuilder PagesWithListItemId(int? listItemId)
+        {
+            _ = listItemId ?? throw new ArgumentNullException(nameof(listItemId));
+            return new global::Graph.Community.Item._api.Sitepages.PagesWithListItemId.PagesWithListItemIdRequestBuilder(PathParameters, RequestAdapter, listItemId);
+        }
+    }
+}
+#pragma warning restore CS0618
