# codegen/lib/apiclient/Models/SiteDesignMetadataCollectionResponse.cs
@@ -9,26 +9,26 @@ namespace Graph.Community.Models
 {
     [global::System.CodeDom.Compiler.GeneratedCode("Kiota", "1.0.0")]
     #pragma warning disable CS1591
-    public partial class ChangeToken : IParsable
+    public partial class SiteDesignMetadataCollectionResponse : IParsable
     #pragma warning restore CS1591
     {
-        /// <summary>The StringValue property</summary>
+        /// <summary>The value property</summary>
 #if NETSTANDARD2_1_OR_GREATER || NETCOREAPP3_1_OR_GREATER
 #nullable enable
-        public string? StringValue { get; set; }
+        public List<global::Graph.Community.Models.SiteDesignMetadata>? Value { get; set; }
 #nullable restore
 #else
-        public string StringValue { get; set; }
+        public List<global::Graph.Community.Models.SiteDesignMetadata> Value { get; set; }
 #endif
         /// <summary>
         /// Creates a new instance of the appropriate class based on discriminator value
         /// </summary>
-        /// <returns>A <see cref="global::Graph.Community.Models.ChangeToken"/></returns>
+        /// <returns>A <see cref="global::Graph.Community.Models.SiteDesignMetadataCollectionResponse"/></returns>
         /// <param name="parseNode">The parse node to use to read the discriminator value and create the object</param>
-        public static global::Graph.Community.Models.ChangeToken CreateFromDiscriminatorValue(IParseNode parseNode)
+        public static global::Graph.Community.Models.SiteDesignMetadataCollectionResponse CreateFromDiscriminatorValue(IParseNode parseNode)
         {
             _ = parseNode ?? throw new ArgumentNullException(nameof(parseNode));
-            return new global::Graph.Community.Models.ChangeToken();
+            return new global::Graph.Community.Models.SiteDesignMetadataCollectionResponse();
         }
         /// <summary>
         /// The deserialization information for the current model
@@ -38,7 +38,7 @@ namespace Graph.Community.Models
         {
             return new Dictionary<string, Action<IParseNode>>
             {
-                { "StringValue", n => { StringValue = n.GetStringValue(); } },
+                { "value", n => { Value = n.GetCollectionOfObjectValues<global::Graph.Community.Models.SiteDesignMetadata>(global::Graph.Community.Models.SiteDesignMetadata.CreateFromDiscriminatorValue)?.AsList(); } },
             };
         }
         /// <summary>
@@ -48,7 +48,7 @@ namespace Graph.Community.Models
         public virtual void Serialize(ISerializationWriter writer)
         {
             _ = writer ?? throw new ArgumentNullException(nameof(writer));
-            writer.WriteStringValue("StringValue", StringValue);
+            writer.WriteCollectionOfObjectValues<global::Graph.Community.Models.SiteDesignMetadata>("value", Value);
         }
     }
 }
